fix z-index in the navigation for mobile

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header {
   transition: 0.3s;
   background-color: var(--white);
   overflow: hidden;
-  z-index: 9;
+  z-index: 999;
 }
 
 .nav__menu.active {
